--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img class="shoes" src="C:\Users\notes\Documents\Web Development\TinDog-Start-master\TinDog-Start-master\images\shoes.svg" alt="shoes">
+          <img class="shoes" src="shoes.svg" alt="shoes">
         </div>
       </div>
 
